# zanata-platform

./: .classpath  .editorconfig  .gitattributes  .gitignore  .hgchurn  .hgignore  .hgtags  .project  .travis-settings.xml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Jenkinsfile  README.md  README.txt  branch-release.sh  brew.repo  build  build-dev.properties  build-prod.properties  build.properties  build.properties.sample  build.sh  build.xml  checkstyle-suppressions.xml  checkstyle.xml  copyright.txt  dependencies.html  dependency-convergence.html  dependency-info.html  dependency-management.html  deployed-jars-ear.list  deployed-jars-war.list  distribution-management.html  docker_push  eclipse-code-formatter-js.xml  eclipse-code-formatter.xml  explode.launch  findbugs-filter.xml  flies.ipr  (+29 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
ant-eclipse-classpath/: .classpath  .project  build.xml
api/: .gitignore  README.txt  pom.xml
apidocs/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  javadoc.sh  options  overview-frame.html  overview-summary.html  overview-tree.html  package-list  packages  serialized-form.html
build-tools/: pom.xml
client/: .gitignore  README.md  README.txt  mkdocs.yml  pom.xml
common/: CONTRIBUTING.md  README.txt  pom.xml
deploy-test/: pom.xml
docker/: Dockerfile  README.md  rundb.sh  rundev.sh
docs/: configuration.md  index.md  installation.md  release-notes.md
flies/: .classpath  deployed-jars-ear.list  flies.launch  pom.xml
flies-adapter-po/: pom.xml
flies-adapter-properties/: pom.xml
flies-adapters/: pom.xml
flies-client-ant-po/: pom.xml
flies-client-ant-properties/: pom.xml
flies-client-commands/: pom.xml
flies-client-publican/: pom.xml
flies-clients/: pom.xml
flies-common-api/: pom.xml
flies-common-util/: pom.xml
flies-gwt-api/: pom.xml
flies-maven-plugin/: README.txt  pom.xml
flies-model/: pom.xml
flies-parent/: pom.xml
flies-rest-api/: pom.xml
flies-rest-client/: pom.xml
flies-richfaces-ui/: pom.xml
flies-selenium/: pom.xml
flies-selenium/src/test/: BasicMacros.cmake  CMakeLists.txt  README  apikey  generate_test_suite.sh  get_apikey.sh  hudson_test_wrap.sh.in  import.sh  selenium-all-tests.sh  steer.cmake  test.cfg
flies-selenium/src/test/java/org/fedorahosted/flies/selenium/: ExampleTest.java
flies-selenium/src/test/resources/: GoJBossJPTest.html  JoinDeTribeTest.html  LeaveDeTribeTest.html  LoginBasicTest.html  LogoutBasicTest.html  NoAdminPrivilegeTest.html  OpenTribeTest.html  README  RootTest.html  SignInAdmin.html  SignInNormal.html  TranslationEditingSuiteTest.html  TranslationLaunchTest.html  TribeSuiteTest.html
flies-selenium/src/test/resources/Privilege/NoAdmin/: 0-Privilege_NoAdmin.html  NoAdminMenuTest.html  NoLocalesManagerAccessTest.html  NoReindexTest.html  NoRoleManagerAccessTest.html  NoSearchTest.html  NoUserManagerAccessTest.html
flies-selenium/src/test/resources/TranslationEditor/Editing/: 0-TranslationEditor_Editing.html  Cleanup.html  FuzzyEntryCheck.html  GoAboutFedora13.html  GoFedoraPtBrTest.html  GoFedoraReleaseNote.html  GoTranslation1st.html  GoTranslationAsIN.html  LanuchVirtualization.html  Launch1stDocTest.html  LaunchAboutFedora.html  MoveToFirstPage.html  NextEntry.html  NextFuzzyX3.html  NextUntranslateFuzzy.html  NextUntranslatedEntry.html  OpenLocaleHref.html  PrevEntry.html  PrevFuzzyX2.html  PrevUntranslatedEntry.html  SignInAdmin.html  SignInNormal.html  SignOut.html  TranslationUnitSaveCheck.html  TypeFuzzy1.html  TypeFuzzy2On15.html  TypeFuzzy3OnPageEnd.html  TypeOn5thRowAndSave.html
flies-selenium/src/test/resources/Tribe/JoinLeave/: 0-Tribe_JoinLeave.html  LoginBasicTest.html  OpenTribeTest.html
flies-vcs/: pom.xml
flies-war/: All_Tests.launch  Integration_Tests.launch  Unit_Tests.launch  debug-jboss-flies.launch  hotdeploy.list  pom.xml  readme.txt  sync_gwt_messages.sh
flies-web/: .classpath  .project  build.properties.sample  build.xml  debug-jboss-flies.launch  deployed-jars.list  explode.launch  flies.launch  glassfish-build.xml  glassfish-readme.txt  pom.xml  readme.txt  seam-gen.properties  validate.xml
flies-web-test/: .classpath  .project  All_Tests.launch
flies-webapp/: pom.xml
flies-webtrans/: Compile GWT Application for safari-chromium-webkit.launch  Compile GWT Application for safari.launch  pom.xml  xdg-open ApplicationSafari.html (web browser).launch
frontend/: .gitignore  README.md  npmWrapper.sh  pom.xml
functional-test/: pom.xml
maven-projects/: pom.xml
mock-server/: pom.xml
parent/: .gitignore  (+5 more)
(+14933 files in other folders)
